--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.ssl.key-store=${key-store-location}
+server.ssl.key-store-password=${key-store-password}
+server.ssl.key-store-type=${key-store-type}
+server.ssl.key-alias=${key-store-alias}
+server.ssl.key-password=${key-store-password}
+server.port=8082
